2006-09-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/changes.txt, data/help/header.txt, NEWS, README, 
	src/tmw.rc: Updated release infos.

2006-09-14  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animation.h, src/animatedsprite.h,
	data/graphics/sprites/weapon.xml: Some modifications at the animation
	system. No more "undefined action foo" warnings in the tmw.log. Not
	visible actions must now be declared explicitely.
	* data/graphics/images/ambient/sandstorm.png, 
	data/graphics/images/ambient/clouds.png: Improved quality of the overlay
	graphics.

2006-09-14  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/gui/char_select.cpp: Remove debug output.
	* src/gui/char_select.cpp, src/main.cpp: Fix the character name
	matching loop and add support for saving the last used character
	(based on a patch by Andrew Harrison).
	* src/gui/char_select.cpp, src/gui/char_select.h, src/main.cpp: Clean
	up the player selection stuff, it's a bit nicer now.
	* src/main.cpp: Fix up the player selection command line option.

2006-09-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/game.h: Simplified fps limiting a bit and added
	some comments. Now based on ConfigListener so that the fpslimit option
	doesn't need to be queried the whole time.
	* NEWS: Updated with some items.

2006-09-11  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/game.cpp: Fixed more fps issues.

2006-09-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp: Removed easy targeting functionality since it
	interferes with walking around too much. Targeting can still be rather
	conveniently done with 'a' or the middle mouse button.

2006-09-07  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/resources/image.cpp: Fixed a typo.
	* src/resources/image.cpp: Worked around a memory leak when using
	OpenGL.

2006-09-06  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/item010.png, data/graphics/sprites/item010.xml,