@@ -1,3 +1,10 @@
+2006-09-16  Philipp Sehmisch  <tmw@crushnet.org>
+
+	* src/animatedsprite.cpp, src/animatedsprite.h:
+	Fixed the crash when attacking without a weapon, some additional stability
+	improvements and more descriptive variable names in the parsing
+	algorithmn.
+
 2006-09-16  Eugenio Favalli  <elvenprogrammer@gmail.com>
 
 	* data/help/changes.txt, data/help/header.txt, NEWS, README, 
